WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65270
Load delegate not consulted before loading some poster images
https://bugs.webkit.org/show_bug.cgi?id=65270
Summary
Load delegate not consulted before loading some poster images
Eric Carlson
Reported
2011-07-27 11:29:12 PDT
The resource load delegate does not get a chance to block a poster image loaded directly by a media engine.
Attachments
Proposed patch.
(5.04 KB, patch)
2011-07-27 14:00 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Proposed patch.
(1.31 KB, patch)
2011-07-28 12:11 PDT
,
Eric Carlson
joepeck
: review+
Details
Formatted Diff
Diff
Updated patch
(1.63 KB, patch)
2011-07-29 14:18 PDT
,
Eric Carlson
joepeck
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2011-07-27 11:29:23 PDT
rdar://8904358
Eric Carlson
Comment 2
2011-07-27 14:00:35 PDT
Created
attachment 102180
[details]
Proposed patch.
Eric Carlson
Comment 3
2011-07-27 15:01:30 PDT
http://trac.webkit.org/changeset/91872
Eric Carlson
Comment 4
2011-07-28 11:46:03 PDT
Reopening as
r65270
causes an assert in a debug build with a media engine that supports poster loading.
Eric Carlson
Comment 5
2011-07-28 12:11:10 PDT
Created
attachment 102283
[details]
Proposed patch.
Joseph Pecoraro
Comment 6
2011-07-29 12:51:01 PDT
Comment on
attachment 102283
[details]
Proposed patch. r=me thanks!
Joseph Pecoraro
Comment 7
2011-07-29 13:06:25 PDT
Comment on
attachment 102283
[details]
Proposed patch. I assume you don't need to set the empty poster url on the player?
Eric Carlson
Comment 8
2011-07-29 14:16:50 PDT
(In reply to
comment #7
)
> (From update of
attachment 102283
[details]
) > I assume you don't need to set the empty poster url on the player?
Excellent point, my patch will prevent the poster from being cleared. Update coming up...
Eric Carlson
Comment 9
2011-07-29 14:18:18 PDT
Created
attachment 102395
[details]
Updated patch
Joseph Pecoraro
Comment 10
2011-07-29 14:23:29 PDT
Comment on
attachment 102395
[details]
Updated patch r=me!
Eric Carlson
Comment 11
2011-07-29 14:31:09 PDT
http://trac.webkit.org/changeset/92009
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug