2011-07-27  Eric Carlson  <eric.carlson@apple.com>

Load delegate not consulted before loading some poster images
        https://bugs.webkit.org/show_bug.cgi?id=65270

        Reviewed by Darin Adler.

        Test: media/video-poster-blocked-by-willsendrequest.html

        * html/HTMLVideoElement.cpp:
        (WebCore::HTMLVideoElement::setDisplayMode): Don't ask media engine to set poster if
            willLoadMediaElementURL returns false.

2011-07-27  Eric Carlson  <eric.carlson@apple.com>

        Load delegate not consulted before loading some poster images
        https://bugs.webkit.org/show_bug.cgi?id=65270

        Reviewed by Darin Adler.

        * media/video-poster-blocked-by-willsendrequest-expected.txt: Added.
        * media/video-poster-blocked-by-willsendrequest.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@91872 bbb929c8-8fbe-4397-9dbb-9b2b20218538